@@ -142,6 +142,27 @@ class TestBrowserDefaultMixin(atcttestcase.ATCTSiteTestCase):
         browserDefaultResolved = self.af.unrestrictedTraverse(browserDefault)()
         self.assertEqual(resolved, browserDefaultResolved)
 
+    def test_inherit_parent_layout(self):
+        # Check to see if subobjects of the same type inherit the layout set
+        # on the parent object
+        af = self.af
+        af.setLayout('folder_tabular_view')
+        af.invokeFactory('Folder', 'subfolder', title='folder 2')
+        subfolder = af.subfolder
+        self.assertEqual(subfolder.getLayout(), 'folder_tabular_view')
+
+    def test_inherit_parent_layout_if_different_type(self):
+        # Objects will not inherit the layout if parent object is a different
+        # type
+        af = self.af
+        af.setLayout('folder_tabular_view')
+        # Create a subobject of a different type (need to enable LPF globally)
+        lpf_fti = self.portal.portal_types['Large Plone Folder']
+        lpf_fti.global_allow = 1
+        af.invokeFactory('Large Plone Folder', 'subfolder', title='folder 2')
+        subfolder = af.subfolder
+        self.failIf(subfolder.getLayout() == 'folder_tabular_view')
+
 tests.append(TestBrowserDefaultMixin)
 
 import unittest
